# sarwas

./: .firebaserc  .gitignore  db.sqlite3  firebase.js  manage.py  mygendict.txt  package-lock.json  pyproject.toml  render.yaml  requirements.txt  requirments.txt  vercel.json
.github/workflows/: update_sarwas.yml
mainApp/: admin.py  models.py  serializer.py  urls.py  views.py
mainApp/migrations/: 0001_initial.py  0002_alter_product_asin.py
sarwas/: asgi.py  settings.py  urls.py  wsgi.py
utils/: ccScore.py  partition.py  search.py
