[tool.poetry]
name = "sarwas"
version = "0.1.0"
description = ""
authors = ["Rahul Kesharwani <rahulkesharwani353@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
